--- a/app/views/topbar.tmpl.html
+++ b/app/views/topbar.tmpl.html
@@ -11,7 +11,7 @@
     <!-- Right Nav Section -->
     <ul class="right">
 
-      <li class="active"><a href="#">Right Button Active</a></li>
+     <!--  <li class="active"><a href="#">Right Button Active</a></li> -->
       <li class="has-dropdown">
         <a href="" ng-click="showStatus=!showStatus">Settings</a>
         <ul class="nav-dropdown" ng-show="showStatus">
