--- a/app/views/seeker/jobs/jobDetail.tmpl.html
+++ b/app/views/seeker/jobs/jobDetail.tmpl.html
@@ -14,7 +14,7 @@
         <li><a href="" class="small button secondary" ng-class="{active: selected == '3'}" ng-click="selected=3">Questions</a></li>
       </ul>
       <div ng-show="selected == 1">
-        <p>{{ selectedJob.about }}</p>
+        <p class="columns small-10">{{ selectedJob.about }}</p>
       </div>
       <div ng-show="selected == 2">
         <p>Benefits</p>
