--- a/app/views/seeker/messaging/detailView.tmpl.html
+++ b/app/views/seeker/messaging/detailView.tmpl.html
@@ -11,8 +11,8 @@
         <span style="white-space:pre">{{selectedEmail.body}}</span>
     </div>
     <div class="modal-footer">
-        <a href="#" class="btn" ng-click="forward()">Forward</a>
-        <a href="#" class="btn" ng-click="reply()">Reply</a>
-        <a href="#" class="btn btn-primary" ng-click="closePopup()">Close</a>
+        <a href="" class="btn" ng-click="forward()">Forward</a>
+        <a href="" class="btn" ng-click="reply()">Reply</a>
+        <a href="" class="btn btn-primary" ng-click="closePopup()">Close</a>
     </div>
 </div>
